@@ -1,3 +1,10 @@
+[b]Version 0.6.5[/b]:
+
+(2008-10-27)
+ * Added the new option "Correct pts" in Preferences->Advanced. Disabled by
+   default because it causes some problems with mkv files.
+
+
 [b]Version 0.6.4[/b]:
 
 (2008-10-22)
